# stm32-experience

./: LICENSE  README.md
cmake-test/: .cproject  .project  CMakeLists.txt  STM32F105RCTX_FLASH.ld
cmake-test/Startup/: startup_stm32f105rctx.s
cortex_debug_test/: CMakeLists.txt  cortex-debug-test.cfg  cortex_debug_test.ioc  createtag.sh  deletetag.sh  tools_descriptor.cmake  version.h.in
cortex_debug_test/Core/Inc/: main.h
cortex_debug_test/Core/Src/: gpio.c  main.c  syscalls.c
cortex_debug_test/cubemx/: BliePill.ioc  DevEBox.ioc  NUCLEO_F103RB.ioc
cortex_debug_test/linker/: STM32F103C8Tx_FLASH.ld  STM32F103RBTx_FLASH.ld  STM32F103ZETx_FLASH.ld
cortex_debug_test/openocd.cfg/: hardware_reset.cfg
cortex_debug_test/project/: output.c  output.h  test.c  test.h
freertos/: CMakeLists.txt  FreeRTOSConfig.h  createtag.sh  deletetag.sh  freertos.ocd.cfg  freertos2.ioc  swo_openocd.cfg  tools_descriptor.cmake
freertos/Core/Inc/: main.h  stm32f1xx_it.h
freertos/Core/Src/: gpio.c  main.c  stm32f1xx_it.c
freertos/cmake/Modules/: GenerateVersionHeader.cmake
freertos/config/: FreeRTOSConfig.h
freertos/freertos/: CMakeLists.txt  FreeRTOSConfig.h
freertos/project/: assert.c  button_isr.c  first_task.c  first_task.h  imanager.c  imanager.h  project.c  project.h  second_task.c  second_task.h  tools.c  tools.h
freertos1/: CMakeLists.txt  Makefile  swo_openocd.cfg  version.h.in
freertos1/Core/Inc/: FreeRTOSConfig.h  FreeRTOSConfigbak.h  freertos.h  main.h
freertos1/Core/Src/: freertos.c  gpio.c  main.c
freertos1/project/: project.c
freertos2/: .mxproject  CMakeLists.txt  FreeRTOSConfig.h  Makefile  freertos2.cfg
freertos2/Core/Inc/: main.h
freertos2/Core/Src/: main.c  stm32f1xx_it.c
freertos2/freertos/portable/GCC/ARM_CM3/: port.c
freertos_1/: CMakeLists.txt  freertos.ioc
freertos_1/Core/Src/: gpio.c
freertos_1/cmake/Modules/: GenerateVersionHeader.cmake
freertos_1/project/: project.h
openocd/: .cproject  .mxproject  .project  CMakeLists.txt  createtag.sh  deletetag.sh  openocd.cfg  openocd.ioc  readmy.txt
openocd/Core/Inc/: main.h  project.h
openocd/Core/Src/: gpio.c  main.c  project.c
openocd/cmake/Modules/: GenerateVersionHeader.cmake
openocd/project/: project.c  project.h
swo/: .cproject  .project  parametrs.txt  swo openocd.cfg  swo.ioc
swo/Core/Inc/: main.h
swo/Core/Src/: main.c  project.c
test_freertos/: .mxproject  Makefile  test_freertos.ioc
test_freertos/Core/Src/: freertos.c  gpio.c  main.c  stm32f1xx_it.c
test_freertos/EWARM/: Project.eww  test_freertos.ewd  test_freertos.ewp
usb_freertos/: .cproject  .mxproject  .project  STM32F107RCTX_FLASH.ld  usb_freertos.ioc
usb_freertos/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
usb_freertos/Core/Src/: freertos.c  gpio.c  main.c  stm32f1xx_it.c
usb_freertos/Middlewares/ST/STM32_USB_Host_Library/Class/HID/Src/: usbh_hid.c
usb_freertos/Middlewares/ST/STM32_USB_Host_Library/Core/Src/: usbh_core.c  usbh_ctlreq.c
usb_freertos/USB_HOST/App/: usb_host.c  usb_host.h
zx-osd/: .cproject  .mxproject  .project  zx-osd.ioc
zx-osd/Core/Inc/: function.h  main.h  stm32f1xx_it.h
zx-osd/Core/Src/: function.c  gpio.c  main - Copy.1c  main.c  spi.c  stm32f1xx_it.c  tim.c
zxkeyboard/: CMakeLists.txt  buildall.sh  createtag.sh  deletetag.sh  tools_descriptor.cmake  zxkeyboard_bin.tar.xz
zxkeyboard/Core/Src/: gpio.c  usbh_platform.c
zxkeyboard/cmake/Modules/: GenerateVersionHeader.cmake
zxkeyboard/doc/: The Lil Old ZX Spectrum 48k Service Manual - Supplement No 2.html
zxkeyboard/openocd.cfg/: core_reset.cfg  hardware_reset_connect_under_reset.cfg  software_system_reset.cfg
zxkeyboard/project/: project.c
